--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,25 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+      <groupId>com.restfb</groupId>
+      <artifactId>restfb</artifactId>
+      <version>1.33.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.facebook4j/facebook4j-core -->
+    <dependency>
+      <groupId>org.facebook4j</groupId>
+      <artifactId>facebook4j-core</artifactId>
+      <version>2.4.8</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>20.0-rc1</version>
+    </dependency>
+			<dependency>
   		<groupId>javax</groupId>
   		<artifactId>javaee-api</artifactId>
   		<version>6.0</version>
