--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,59 @@
   		<version>6.0</version>
   		<scope>provided</scope>
   	</dependency>
-        </dependencies>
-        
+
+      <dependency>
+          <groupId>org.glassfish.jersey.containers</groupId>
+          <artifactId>jersey-container-servlet</artifactId>
+          <version>2.10.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.glassfish.jersey.media</groupId>
+          <artifactId>jersey-media-json-jackson</artifactId>
+          <version>2.10.1</version>
+          <scope>runtime</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.jaxrs</groupId>
+          <artifactId>jackson-jaxrs-json-provider</artifactId>
+          <version>2.4.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.4.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.4.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>2.4.1</version>
+      </dependency>
+
+
+  </dependencies>
+
+    <build>
+    <finalName>newjersey</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <server>TomcatServer</server>
+                <path>/newjersey</path>
+            </configuration>
+        </plugin>
+    </plugins>
+    </build>
 </project>
