--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
   </dependencies>
 
     <build>
-    <finalName>newjersey</finalName>
+    <finalName>rb-analytics</finalName>
     <plugins>
         <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
@@ -107,7 +107,7 @@
             <version>2.2</version>
             <configuration>
                 <server>TomcatServer</server>
-                <path>/newjersey</path>
+                <path>/rb-analytics</path>
             </configuration>
         </plugin>
     </plugins>
